gl51-master/src/test/deca/codegen/invalid/division_by_zero.deca
// Description :
//      Tests de division par zéro
// Résultats :
//      ERROR: Division by zero




{
    print(1/0);
}